--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -29,6 +29,7 @@
     <string name="menu_invite">Пригласить друзей</string>
     <string name="menu_feature_settings">Дополнительные настройки</string>
     <string name="menu_settings">Основные настройки</string>
+    <string name="menu_mms_configuration">Перенос MMS</string>
     <string name="menu_account">Моя учётная запись</string>
     <string name="menu_device_texting">Другие платформы</string>
     <string name="menu_help">Помощь и отзывы</string>
@@ -98,7 +99,7 @@
     <string name="invite_friends_sms">Я начал использовать новое приложение для переписки и думаю, что оно тебе бы понравилось! К тому же оно бесплатное. Можешь загрузить его тут: http://messenger.klinkerapps.com</string>
     <!-- Message List Screen -->
     <string name="type_message">Введите сообщение</string>
-    <string name="type_message_to">Вевдите сообщение для %1$s</string>
+    <string name="type_message_to">Введите сообщение для %1$s</string>
     <string name="attach">Прикрепить</string>
     <string name="select_sim">Выбрать SIM</string>
     <string name="message_from">%1$s</string>
@@ -162,7 +163,7 @@
     <string name="onboarding_title_1">Переосмысленное общение</string>
     <string name="onboarding_title_2">Доступно где угодно!</string>
     <string name="onboarding_title_3">Продвинутая персонализация</string>
-    <string name="onboarding_content_1">"Плавные переходы, продуманный дизайн и интеграция между множеством устойств. Pulse ставит ваше общение во главу угла!"</string>
+    <string name="onboarding_content_1">"Плавные переходы, продуманный дизайн и интеграция между множеством устройств. Pulse ставит ваше общение во главу угла!"</string>
     <string name="onboarding_content_2">Переписывайтесь на своём планшете, умных часах или любом другом устройстве.</string>
     <string name="onboarding_content_3">Закрепляйте, приглушайте, раскрашивайте и настраивайте уведомления для любого диалога. Сделайте Pulse своим.</string>
     <string name="message_anywhere_onboarding_title_1">Переписывайте где угодно</string>
@@ -189,9 +190,9 @@
         <item quantity="many">Много новых сообщений</item>
     </plurals>
     <string name="read">Прочитать</string>
-    <string name="reply">Ответить</string>
+    <string name="reply">Ответ</string>
     <string name="reply_to">Ответить %1$s</string>
-    <string name="call">Позвонить</string>
+    <string name="call">Вызов</string>
     <string-array name="reply_choices">
         <item>Да</item>
         <item>Нет</item>
@@ -237,7 +238,7 @@
         <item quantity="many"></item>
     </plurals>
     <string name="pin_conversation">Закрепить диалог</string>
-    <string name="pin_conversation_summary">Держать данный диалог вверху списка</string>
+    <string name="pin_conversation_summary">Держать этот диалог вверху списка</string>
     <string name="mute_conversation">Приглушить диалог</string>
     <string name="mute_conversation_summary">Скрыть уведомления диалога</string>
     <string name="private_conversation">Приватный диалог</string>
@@ -256,20 +257,24 @@
     <string name="repeat_ten_mins">Каждые 10 минут</string>
     <string name="repeat_half_hour">Каждые полчаса</string>
     <string name="repeat_hour">Каждый час</string>
+    <string name="wake_screen">Включение экрана</string>
     <string name="vibrate">Вибрация</string>
     <string name="vibrate_off">Без вибрации</string>
-    <string name="vibrate_default">Стандартная вибрация</string>
-    <string name="vibrate_two_long">Две долгих вибрации</string>
-    <string name="vibrate_two_short">Две коротких вибрации</string>
-    <string name="vibrate_three_short">Три коротких вибрации</string>
-    <string name="vibrate_one_short_one_long">Одна короткая и одна длинная вибрация</string>
-    <string name="vibrate_one_long_one_short">Одна длинная и одна короткая вибрации</string>
+    <string name="vibrate_default">Стандартная</string>
+    <string name="vibrate_two_long">Две долгих</string>
+    <string name="vibrate_two_short">Две коротких</string>
+    <string name="vibrate_three_short">Три коротких</string>
+    <string name="vibrate_one_short_one_long">Одна короткая и одна длинная</string>
+    <string name="vibrate_one_long_one_short">Одна длинная и одна короткая</string>
+    <string name="vibrate_one_short">Короткая</string>
+    <string name="vibrate_one_long">Длинная</string>
     <string name="sound_effects">Звуковые эффекты</string>
     <string name="delivery_reports">Отчёт о доставке</string>
     <string name="theme_settings">Персонализация</string>
     <string name="base_theme">Основная тема</string>
     <string name="global_theme_color">Цвет темы</string>
     <string name="font_size">Размер шрифта</string>
+    <string name="rounder_bubbles">Закруглённые пузырьки сообщений</string>
     <string name="blacklist_hint">Номер для добавления в ч/с</string>
     <string name="add_blacklist">%1$s\n\nВы уверены, что хотите добавить этот номер в чёрный список? Сообщения от него не будут сохранены и вы не будете получать уведомления при получении!</string>
     <string name="remove_blacklist">%1$s\n\nВы хотите удалить этот номер из ч/с?</string>
@@ -308,6 +313,16 @@
     <string name="send_as_mms_summary">Длинные сообщения будут отправлены как MMS, вместо нескольких SMS</string>
     <string name="alert_types">Виды уведомлений</string>
     <string name="alert_types_summary">Различные пользовательские настройки уведомлений</string>
+    <!-- MMS Configuration Settings -->
+    <string name="max_mms_size">Максимальный размер изображения</string>
+    <string name="apn_configuration">Настройка APN</string>
+    <string name="override_system_apn">Переписываем системные APN</string>
+    <string name="mmsc_url">MMSC URL</string>
+    <string name="mms_proxy">MMS прокси</string>
+    <string name="mms_port">MMS порт</string>
+    <string name="user_agent">Система</string>
+    <string name="user_agent_profile_url">URL профиля в системе</string>
+    <string name="user_agent_profile_tag">Тэг профиля в системе</string>
     <!-- Advanced Features Settings -->
     <string name="signature">Подпись</string>
     <string name="signature_summary">Примечание: отправленные подписи не будут отображаться в списке сообщений Pulse. Подписи будут показаны только получателю сообщения.</string>
@@ -367,6 +382,7 @@
     <string name="conversation_with">Диалог с %1$s</string>
     <string name="send">Отправить</string>
     <!-- Other -->
+    <string name="updating_database">Ищем последние сообщения...</string>
     <string name="dashclock_description">Информация о непрочитанных SMS/MMS</string>
     <string name="default_text">Стандартный</string>
     <string name="did_you_know">Знаете ли вы?</string>
@@ -381,7 +397,10 @@
     <string name="minutes">Минуты</string>
     <string name="test">Тест</string>
     <string name="off">Выкл.</string>
+    <string name="on">Вкл.</string>
     <!-- Times -->
+    <string name="one_second">Секундочку</string>
+    <string name="three_seconds">3 секунды</string>
     <string name="five_seconds">5 секунд</string>
     <string name="ten_seconds">10 секунд</string>
     <string name="fifteen_seconds">15 секунд</string>
