--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -27,9 +27,9 @@
     <string name="menu_schedule">Отложенные диалоги</string>
     <string name="menu_mute_contacts">Чёрный список</string>
     <string name="menu_invite">Пригласить друзей</string>
-    <string name="menu_feature_settings">Дополнительные настройки</string>
-    <string name="menu_settings">Основные настройки</string>
-    <string name="menu_mms_configuration">Перенос MMS</string>
+    <string name="menu_feature_settings">Дополнительно</string>
+    <string name="menu_settings">Настройки</string>
+    <string name="menu_mms_configuration">Настройка MMS</string>
     <string name="menu_account">Моя учётная запись</string>
     <string name="menu_device_texting">Другие платформы</string>
     <string name="menu_help">Помощь и отзывы</string>
@@ -47,7 +47,7 @@
     <string name="menu_conversation_information">Информация о диалоге</string>
     <string name="menu_conversation_blacklist">Добавить в чёрный список</string>
     <string name="menu_conversation_schedule">Отложить сообщение</string>
-    <string name="menu_contact_settings">Настройки контакта</string>
+    <string name="menu_contact_settings">Персонализация</string>
     <string name="menu_group_settings">Настройки группы</string>
     <string name="menu_snooze_off">Выкл</string>
     <string name="menu_snooze_1">1 час</string>
@@ -250,14 +250,14 @@
     <string name="ringtone">Мелодия</string>
     <string name="group_name">Имя группы</string>
     <string name="notification_settings">Уведомления</string>
-    <string name="repeat_interval">Повторить оповещение</string>
+    <string name="repeat_interval">Повтор</string>
     <string name="repeat_never">Никогда</string>
     <string name="repeat_one_min">Каждую минуту</string>
     <string name="repeat_five_mins">Каждые 5 минут</string>
     <string name="repeat_ten_mins">Каждые 10 минут</string>
     <string name="repeat_half_hour">Каждые полчаса</string>
     <string name="repeat_hour">Каждый час</string>
-    <string name="wake_screen">Включение экрана</string>
+    <string name="wake_screen">Включать экран</string>
     <string name="vibrate">Вибрация</string>
     <string name="vibrate_off">Без вибрации</string>
     <string name="vibrate_default">Стандартная</string>
@@ -312,15 +312,15 @@
     <string name="send_as_mms">Преобразовать в MMS</string>
     <string name="send_as_mms_summary">Длинные сообщения будут отправлены как MMS, вместо нескольких SMS</string>
     <string name="alert_types">Виды уведомлений</string>
-    <string name="alert_types_summary">Различные пользовательские настройки уведомлений</string>
+    <string name="alert_types_summary">Различные настройки уведомлений</string>
     <!-- MMS Configuration Settings -->
     <string name="max_mms_size">Максимальный размер изображения</string>
     <string name="apn_configuration">Настройка APN</string>
-    <string name="override_system_apn">Переписываем системные APN</string>
+    <string name="override_system_apn">Свои настройки APN</string>
     <string name="mmsc_url">MMSC URL</string>
     <string name="mms_proxy">MMS прокси</string>
     <string name="mms_port">MMS порт</string>
-    <string name="user_agent">Система</string>
+    <string name="user_agent">User agent</string>
     <string name="user_agent_profile_url">URL профиля в системе</string>
     <string name="user_agent_profile_tag">Тэг профиля в системе</string>
     <!-- Advanced Features Settings -->
@@ -337,7 +337,7 @@
     <string name="always_light">Всегда светлая</string>
     <string name="always_dark">Всегда тёмная</string>
     <string name="always_black">Всегда чёрная</string>
-    <string name="set_color_per_conversation">Установить цвет для диалога</string>
+    <string name="set_color_per_conversation">Автоматически</string>
     <string name="material_color_red">Красный</string>
     <string name="material_color_pink">Розовый</string>
     <string name="material_color_purple">Фиолетовый</string>
@@ -399,7 +399,7 @@
     <string name="off">Выкл.</string>
     <string name="on">Вкл.</string>
     <!-- Times -->
-    <string name="one_second">Секундочку</string>
+    <string name="one_second">1 секунда</string>
     <string name="three_seconds">3 секунды</string>
     <string name="five_seconds">5 секунд</string>
     <string name="ten_seconds">10 секунд</string>
