--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -280,6 +280,10 @@
     <string name="vibrate_one_long_one_short">One long, one short vibration</string>
     <string name="vibrate_one_short">One short vibration</string>
     <string name="vibrate_one_long">One long vibration</string>
+    <string name="keyboard_layout">Keyboard Layout</string>
+    <string name="keyboard_default">Default Keyboard</string>
+    <string name="keyboard_send_key">Send Key</string>
+    <string name="keyboard_enter_key">Enter Key</string>
     <string name="sound_effects">Sound Effects</string>
     <string name="delivery_reports">Delivery Reports</string>
     <string name="theme_settings">Customization</string>
