--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -150,6 +150,7 @@ Commencez !
     <string name="onboarding_content_3">Épingler, désactiver ou personnaliser les notifications pour chacun de vos contacts. Faite de Pulse votre application.</string>
     <string name="message_anywhere_onboarding_title_1">Envoyez des messages de partout</string>
     <string name="message_anywhere_onboarding_title_2">Abonnement ou Paiement Unique</string>
+    <string name="message_anywhere_onboarding_title_3">Une semaine d\'essai</string>
     <!-- Notifications -->
     <string name="notification_ticker">Nouveau message de %1$s</string>
     <plurals name="new_conversations">
@@ -224,6 +225,7 @@ pourrez rencontrer !</string>
     <string name="vibrate_three_short">Trois courtes vibrations</string>
     <string name="vibrate_one_short_one_long">Une courte, et une longue vibration</string>
     <string name="vibrate_one_long_one_short">Une longue, et une courte vibration</string>
+    <string name="keyboard_enter_key">Touche \"Entrée\"</string>
     <string name="sound_effects">Effets sonores</string>
     <string name="delivery_reports">Accusés de réception</string>
     <string name="theme_settings">Personnalisation</string>
@@ -231,6 +233,7 @@ pourrez rencontrer !</string>
     <string name="global_theme_color">Thème couleur</string>
     <string name="font_size">Taille de la police</string>
     <string name="rounder_bubbles">Bulles arrondies</string>
+    <string name="swipe_delete">Glisser pour effacer</string>
     <string name="blacklist_hint">Tapez un nombre dans la liste noire</string>
     <string name="add_blacklist">%1$s
 
@@ -260,7 +263,7 @@ pourrez rencontrer !</string>
     <string name="font_size_large">Grand</string>
     <string name="font_size_extra_large">Très grand</string>
     <string name="advanced">Avancé</string>
-    <string name="send_as_mms">Convenir en MMS</string>
+    <string name="send_as_mms">Convertir en MMS</string>
     <string name="alert_types">Types d\'alertes</string>
     <string name="alert_types_summary">Préférences de notifications variées</string>
     <!-- MMS Configuration Settings -->
