--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -29,6 +29,7 @@
     <string name="menu_invite">Запросити друзів</string>
     <string name="menu_feature_settings">Додаткові можливості</string>
     <string name="menu_settings">Налаштування</string>
+    <string name="menu_mms_configuration">Конфігурація MMS</string>
     <string name="menu_account">Мій обліковий запис</string>
     <string name="menu_device_texting">Пишіть з будь-якого пристрою</string>
     <string name="menu_help">Допомога та відгуки</string>
@@ -42,7 +43,7 @@
     <string name="menu_view_media">Перегляд медіа</string>
     <string name="menu_delete_conversation">Видалити розмову</string>
     <string name="menu_archive_conversation">Заархівувати розмову</string>
-    <string name="menu_move_to_inbox">Перемістити в папку Вхідні</string>
+    <string name="menu_move_to_inbox">Перемістити у Вхідні</string>
     <string name="menu_conversation_information">Інформація про розмову</string>
     <string name="menu_conversation_blacklist">"Додати в чорний список "</string>
     <string name="menu_conversation_schedule">Запланувати повідомлення</string>
@@ -82,10 +83,10 @@
         <item quantity="many">%1$d розмов заархівовано</item>
     </plurals>
     <plurals name="conversations_unarchived">
-        <item quantity="one">%1$d розмову перенесено у папку вхідні</item>
-        <item quantity="other">%1$d розмови перенесено у папку вхідні</item>
-        <item quantity="few">%1$d розмов перенесено у папку вхідні</item>
-        <item quantity="many">%1$d розмов перенесено у папку вхідні</item>
+        <item quantity="one">%1$d розмову перенесено у Вхідні</item>
+        <item quantity="other">%1$d розмови перенесено у Вхідні</item>
+        <item quantity="few">%1$d розмов перенесено у Вхідні</item>
+        <item quantity="many">%1$d розмов перенесено у Вхідні</item>
     </plurals>
     <string name="undo">Скасувати</string>
     <string name="enter_search">Шукати…</string>
@@ -118,8 +119,7 @@ http://messenger.klinkerapps.com</string>
     <string name="record_audio">Записати аудіо</string>
     <string name="attach_location">Додати розташування</string>
     <string name="no_location_found">Не вдалося визначити місце розташування.</string>
-    <string name="camera_permission_needed">Необхідно надати дозвіл камері на знімання 
-фото!</string>
+    <string name="camera_permission_needed">Необхідно дозвіл на використання камери для знімання фото!</string>
     <string name="take_picture">Зробити знімок</string>
     <string name="flip_picture">Повернути камеру</string>
     <string name="fullscreen">Повноекранний</string>
@@ -132,7 +132,7 @@ http://messenger.klinkerapps.com</string>
     <string name="save">Зберегти</string>
     <string name="share">Поділитися</string>
     <string name="share_content">Поділитися вмістом ...</string>
-    <string name="saved">Збережено в папці / Завантаження!</string>
+    <string name="saved">Збережено в папці Завантаження!</string>
     <string name="failed_to_save">Не вдалося зберегти</string>
     <string name="start_recording_audio">Натисніть на кнопку, щоб почати запис аудіо!</string>
     <string name="audio_recording_error">Помилка із записом :(</string>
@@ -175,7 +175,7 @@ Pulse ставить ваші розмови на попередній план.
     <string name="message_anywhere_onboarding_title_2">Підписка або разовий платіж</string>
     <string name="message_anywhere_onboarding_title_3">"Тиждень пробної версії "</string>
     <string name="message_anywhere_onboarding_content_1">Легко інтегрується з будь-яким пристроєм (планшет, годинник, телевізор, веб-браузери, і рідний Google Chrome і Firefox) для підтримки SMS та MMS, звідки завгодно!</string>
-    <string name="message_anywhere_onboarding_content_2">Шалено низькі цінові пропозиції, щоб сплатити тоді, коли Вам це потрібно: $10.99 на все життя, $5.99 за рік, $1.99 за 3 місяці, або $0.99 за місяць. Менш ніж чашка кави.</string>
+    <string name="message_anywhere_onboarding_content_2">Шалено низькі цінові пропозиції: $10.99 на все життя, $5.99 за рік, $1.99 за 3 місяці, або $0.99 за місяць. Дешевше ніж чашка кави.</string>
     <string name="message_anywhere_onboarding_content_3">Використовуйте додаток для Android БЕЗКОШТОВНО (назавжди!) на вашому телефоні, або почніть користуватися текстовими повідомленнями з усіх своїх пристроїв з безкоштовною пробною версією протягом ОДНОГО ТИЖНЯ.</string>
     <string name="start_trial">Почати використовувати пробну версію</string>
     <string name="not_now">Не зараз</string>
@@ -208,7 +208,8 @@ Pulse ставить ваші розмови на попередній план.
     <string name="new_mms_message">Нове повідомлення MMS</string>
     <string name="you">Ви</string>
     <string name="new_message">Нове повідомлення</string>
-    <string name="received_new_message">Ви отримали нове текстове повідомлення!</string>
+    <string name="received_new_message">Отримано нове повідомлення!</string>
+    <string name="media">Медіа</string>
     <!-- About, Help and Feedback and Settings -->
     <string name="changelog">Журнал змін</string>
     <string name="copyright">© 2016 Jake Klinker &amp; Luke Klinker</string>
@@ -217,8 +218,8 @@ Pulse ставить ваші розмови на попередній план.
     <string name="device_id">Ідентифікатор пристрою</string>
     <string name="device_info">Інформація про пристрій</string>
     <string name="website">Веб-сайт</string>
-    <string name="access_messages_from_any_device">Доступ і відправлення повідомлень з будь-якого пристрою!</string>
-    <string name="beta_disclaimer">Цей проект все ще знаходиться в бета - версії, будь ласка, повідомте про проблеми, які ви можете знайти!</string>
+    <string name="access_messages_from_any_device">Доступ і відправка повідомлень з будь-якого пристрою!</string>
+    <string name="beta_disclaimer">Цей проект все ще знаходиться в бета-версії, будь ласка, повідомте про проблеми, які ви можете знайти!</string>
     <string name="faqs">Питання, що часто задаються</string>
     <string name="features">Особливості</string>
     <string name="issues">Вирішення проблем</string>
@@ -262,6 +263,7 @@ Pulse ставить ваші розмови на попередній план.
     <string name="repeat_ten_mins">Кожні десять хвилин</string>
     <string name="repeat_half_hour">Кожні півгодини</string>
     <string name="repeat_hour">Кожної години</string>
+    <string name="wake_screen">Пробудження екрану</string>
     <string name="vibrate">Зразок вібрації</string>
     <string name="vibrate_off">Без вібрації</string>
     <string name="vibrate_default">Вібрація за замовчуванням</string>
@@ -270,12 +272,20 @@ Pulse ставить ваші розмови на попередній план.
     <string name="vibrate_three_short">Три короткі</string>
     <string name="vibrate_one_short_one_long">Одна коротка, одна довга</string>
     <string name="vibrate_one_long_one_short">Одна довга, одна коротка</string>
+    <string name="vibrate_one_short">Одна коротка вібрація</string>
+    <string name="vibrate_one_long">Одна довга вібрація</string>
+    <string name="keyboard_layout">Розкладка клавіатури</string>
+    <string name="keyboard_default">Клавіатура за замовчуванням</string>
+    <string name="keyboard_send_key">Відправити ключ</string>
+    <string name="keyboard_enter_key">Введіть ключ</string>
     <string name="sound_effects">Звукові ефекти</string>
     <string name="delivery_reports">Звіти про доставку</string>
     <string name="theme_settings">Персональні налаштування</string>
     <string name="base_theme">Базова тема</string>
     <string name="global_theme_color">Колір теми</string>
     <string name="font_size">Розмір шрифту</string>
+    <string name="rounder_bubbles">Заокруглені краї повідомлення</string>
+    <string name="swipe_delete">Гортайте щоб видалити</string>
     <string name="blacklist_hint">Введіть номер в чорний список ...</string>
     <string name="add_blacklist">%1$s Ви впевнені що хочете додати цей чорний список? Повідомлення не будуть 
 зберігатися коли вони прийдуть від контактів з цього переліку і Ви про них не будете сповіщені!</string>
@@ -317,6 +327,19 @@ Pulse ставить ваші розмови на попередній план.
     <string name="send_as_mms_summary">Довгі повідомлення будуть надіслані як MMS замість окремих SMS</string>
     <string name="alert_types">Типи сповіщень</string>
     <string name="alert_types_summary">Налаштування сповіщень</string>
+    <string name="strip_unicode">Не використовувати Юнікод</string>
+    <string name="strip_unicode_summary">Специфічні символи будуть видалені із повідомлення що надсилається</string>
+    <string name="giffgaff_delivery">Звіти про доставку Giffgaff</string>
+    <!-- MMS Configuration Settings -->
+    <string name="max_mms_size">Максимальний розмір зображення</string>
+    <string name="apn_configuration">Конфігурація APN</string>
+    <string name="override_system_apn">Перевизначити APN системи</string>
+    <string name="mmsc_url">URL cистемного центру мультимедійних повідомлень</string>
+    <string name="mms_proxy">MMS проксі</string>
+    <string name="mms_port">MMS порт</string>
+    <string name="user_agent">Агент користувача</string>
+    <string name="user_agent_profile_url">URL профілю агента користувача</string>
+    <string name="user_agent_profile_tag">Тег-ім\'я профілю агента користувача</string>
     <!-- Advanced Features Settings -->
     <string name="signature">Підпис</string>
     <string name="signature_summary">Примітка: надіслані підписи не будуть відображатися в списку повідомлень Pulse. Підписи будуть показані тільки одержувачу в повідомленні.</string>
@@ -377,6 +400,7 @@ Pulse ставить ваші розмови на попередній план.
     <string name="conversation_with">Розмова з %1$s</string>
     <string name="send">Надіслати</string>
     <!-- Other -->
+    <string name="updating_database">Пошук останніх повідомлень ...</string>
     <string name="dashclock_description">Непрочитані SMS/MMS</string>
     <string name="default_text">За замовчуванням</string>
     <string name="did_you_know">Ви знали?</string>
@@ -392,7 +416,10 @@ Pulse ставить ваші розмови на попередній план.
     <string name="minutes">Хвилин</string>
     <string name="test">Тест</string>
     <string name="off">Вимкнено</string>
+    <string name="on">Увімкнути</string>
     <!-- Times -->
+    <string name="one_second">Одна секунда</string>
+    <string name="three_seconds">Три секунди</string>
     <string name="five_seconds">П\'ять секунд</string>
     <string name="ten_seconds">Десять секунд</string>
     <string name="fifteen_seconds">П\'ятнадцять секунд</string>
